--- a/smollm-webgpu/package.json
+++ b/smollm-webgpu/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@huggingface/transformers": "3.5.0",
+    "@univerjs/presets": "^0.5.5",
     "dompurify": "^3.1.2",
     "marked": "^12.0.2",
     "react": "^18.3.1",
