--- a/smollm-webgpu/package.json
+++ b/smollm-webgpu/package.json
@@ -15,6 +15,7 @@
     "dompurify": "^3.1.2",
     "marked": "^12.0.2",
     "react": "^18.3.1",
+    "react-h5-audio-player": "^3.9.1"
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
